service-staging.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: cluster-monitoring-staging
  labels:
    app: prometheus
    env: staging
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
      name: web
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: cluster-monitoring-staging
  labels:
    app: alertmanager
    env: staging
spec:
  selector:
    app: alertmanager
  ports:
    - port: 9093
      targetPort: 9093
      name: web
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: cluster-monitoring-staging
  labels:
    app: grafana
    env: staging
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
      name: web
